--- a/dom.html
+++ b/dom.html
@@ -10,6 +10,10 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
+		<link
+			rel="stylesheet"
+			href="css/dom-styles.css"
+		/>
 		<title>Dom</title>
 	</head>
 	<body>
