Reloj y reproductor de música

--- a/ejercicios-dom/index.html
+++ b/ejercicios-dom/index.html
@@ -28,11 +28,11 @@
 		<header>
 			<div class="name">Web</div>
 			<nav class="desktop-navbar">
-				<a href="#">Seccion 1</a>
-				<a href="#section2">Sección 2</a>
-				<a href="#section3">Sección 3</a>
-				<a href="#section4">Sección 4</a>
-				<a href="#section5">Sección 5</a>
+				<a href="#">Reloj</a>
+				<a href="#section2">Teclado</a>
+				<a href="#section3">Sección3</a>
+				<a href="#section4">Sección4</a>
+				<a href="#section5">Sección5</a>
 			</nav>
 		</header>
 		<div class="menu-btn">
@@ -42,10 +42,10 @@
 		<aside>
 			<nav class="mobile-navbar">
 				<a href="#">Reloj</a>
-				<a href="#section2">Sección 2</a>
-				<a href="#section3">Sección 3</a>
-				<a href="#section4">Sección 4</a>
-				<a href="#section5">Sección 5</a>
+				<a href="#section2">Teclado</a>
+				<a href="#section3">Sección3</a>
+				<a href="#section4">Sección4</a>
+				<a href="#section5">Sección5</a>
 			</nav>
 		</aside>
 		<main>
@@ -53,23 +53,22 @@
 				id="section1"
 				class="container"
 			>
-				<h2>Reloj y Alarma</h2>
+				<h2>Reloj y Música</h2>
 				<div class="clock"></div>
 				<div class="clock-buttons">
 					<button class="clock-init">Iniciar Reloj</button>
 					<button class="clock-stop">Parar Reloj</button>
 				</div>
 				<div class="clock-buttons">
-					<button class="alarm-init">Iniciar Alarma</button>
-					<button class="alarm-stop">Parar Alarma</button>
+					<button class="music-init">Iniciar Música</button>
+					<button class="music-stop">Parar Música</button>
 				</div>
 			</section>
-
 			<section
 				id="section2"
 				class="container"
 			>
-				<h2>Sección 2</h2>
+				<h2>Eventos del Teclado</h2>
 			</section>
 			<section
 				id="section3"
