Mover objetos con las teclas y contador

--- a/ejercicios-dom/index.html
+++ b/ejercicios-dom/index.html
@@ -30,7 +30,7 @@
 			<nav class="desktop-navbar">
 				<a href="#">Reloj</a>
 				<a href="#section2">Teclado</a>
-				<a href="#section3">Sección3</a>
+				<a href="#section3">Regresiva</a>
 				<a href="#section4">Sección4</a>
 				<a href="#section5">Sección5</a>
 			</nav>
@@ -43,7 +43,7 @@
 			<nav class="mobile-navbar">
 				<a href="#">Reloj</a>
 				<a href="#section2">Teclado</a>
-				<a href="#section3">Sección3</a>
+				<a href="#section3">Regresiva</a>
 				<a href="#section4">Sección4</a>
 				<a href="#section5">Sección5</a>
 			</nav>
@@ -69,12 +69,16 @@
 				class="container"
 			>
 				<h2>Eventos del Teclado</h2>
+				<article class="stage">
+					<div class="ball"></div>
+				</article>
 			</section>
 			<section
 				id="section3"
 				class="container"
 			>
-				<h2>Sección 3</h2>
+				<h2>Cuenta Regresiva</h2>
+				<div class="countdown"></div>
 			</section>
 			<section
 				id="section4"
