Light y dark theme

--- a/ejercicios-dom/index.html
+++ b/ejercicios-dom/index.html
@@ -48,7 +48,7 @@
 				<a href="#section5">Sección5</a>
 			</nav>
 		</aside>
-		<main>
+		<main class="main-context">
 			<section
 				id="section1"
 				class="container"
@@ -93,6 +93,13 @@
 				<h2>Sección 5</h2>
 			</section>
 		</main>
+		<button class="scroll-top-btn hidden">
+			<i class="fa-solid fa-arrow-up"></i>
+		</button>
+		<buttton class="theme-btn"
+			><i class="fa-solid fa-sun sun-icon"></i
+			><i class="fa-solid fa-moon moon-icon inactive"></i
+		></buttton>
 		<script
 			src="./js/index-dom.js"
 			type="module"
