Se agregaron: ventana emergente, detección de dispositivos, detección de red y control de cámara web.

--- a/ejercicios-dom/index.html
+++ b/ejercicios-dom/index.html
@@ -30,9 +30,9 @@
 			<nav class="desktop-navbar">
 				<a href="#">Reloj</a>
 				<a href="#section2">Teclado</a>
-				<a href="#section3">Regresiva</a>
-				<a href="#section4">Sección4</a>
-				<a href="#section5">Sección5</a>
+				<a href="#section3">Emergente</a>
+				<a href="#section4">Detección</a>
+				<a href="#section5">Webcam</a>
 			</nav>
 		</header>
 		<div class="menu-btn">
@@ -43,9 +43,9 @@
 			<nav class="mobile-navbar">
 				<a href="#">Reloj</a>
 				<a href="#section2">Teclado</a>
-				<a href="#section3">Regresiva</a>
-				<a href="#section4">Sección4</a>
-				<a href="#section5">Sección5</a>
+				<a href="#section3">Emergente</a>
+				<a href="#section4">Detección</a>
+				<a href="#section5">Webcam</a>
 			</nav>
 		</aside>
 		<main class="main-context">
@@ -77,20 +77,29 @@
 				id="section3"
 				class="container"
 			>
-				<h2>Cuenta Regresiva</h2>
-				<div class="countdown"></div>
+				<h2>Ventana emergente</h2>
+				<button class="open-window-btn">Abrir ventana</button>
+				<button class="close-window-btn">Cerrar ventana</button>
 			</section>
 			<section
 				id="section4"
 				class="container"
 			>
-				<h2>Sección 4</h2>
+				<h2>Detección de Dispositivos <br />(User Agent)</h2>
+				<div id="user-device"></div>
 			</section>
 			<section
 				id="section5"
 				class="container"
 			>
-				<h2>Sección 5</h2>
+				<h2>Detección de Webcam</h2>
+
+				<video
+					src=""
+					class="webcam"
+					controls
+				></video>
+				<button class="start-webcam-btn">Iniciar cámara web</button>
 			</section>
 		</main>
 		<button class="scroll-top-btn hidden">
