--- a/ejercicios-dom/index.html
+++ b/ejercicios-dom/index.html
@@ -33,6 +33,8 @@
 				<a href="#section3">Emergente</a>
 				<a href="#section4">Detección</a>
 				<a href="#section5">Webcam</a>
+				<a href="#section6">Geolocalización</a>
+				<a href="#section7">Filtro</a>
 			</nav>
 		</header>
 		<div class="menu-btn">
@@ -46,6 +48,8 @@
 				<a href="#section3">Emergente</a>
 				<a href="#section4">Detección</a>
 				<a href="#section5">Webcam</a>
+				<a href="#section6">Geolocalización</a>
+				<a href="#section7">Filtro</a>
 			</nav>
 		</aside>
 		<main class="main-context">
@@ -93,13 +97,78 @@
 				class="container"
 			>
 				<h2>Detección de Webcam</h2>
-
 				<video
 					src=""
 					class="webcam"
 					controls
 				></video>
 				<button class="start-webcam-btn">Iniciar cámara web</button>
+			</section>
+			<section
+				id="section6"
+				class="container"
+			>
+				<h2>Geolocalización</h2>
+				<div id="geolocation"></div>
+			</section>
+			<section
+				id="section7"
+				class="container"
+			>
+				<h2>Filtro de búsqueda</h2>
+				<input
+					type="search"
+					placeholder="Buscar..."
+					class="card-filter"
+				/>
+				<article class="cards-container">
+					<figure class="card">
+						<img
+							src="https://placeimg.com/200/200/nature"
+							alt="Nature"
+						/>
+						<figcaption>Naturaleza</figcaption>
+					</figure>
+					<figure class="card">
+						<img
+							src="https://placeimg.com/200/200/animals"
+							alt="animals"
+						/>
+						<figcaption>Animales</figcaption>
+					</figure>
+					<figure class="card">
+						<img
+							src="https://placeimg.com/200/200/people"
+							alt="people"
+						/>
+						<figcaption>Personas</figcaption>
+					</figure>
+					<figure class="card">
+						<img
+							src="https://placeimg.com/200/200/tech"
+							alt="tech"
+						/>
+						<figcaption>Tecnología</figcaption>
+					</figure>
+				</article>
+			</section>
+			<section
+				id="section7"
+				class="container"
+			>
+				<h2></h2>
+			</section>
+			<section
+				id="section7"
+				class="container"
+			>
+				<h2></h2>
+			</section>
+			<section
+				id="section7"
+				class="container"
+			>
+				<h2></h2>
 			</section>
 		</main>
 		<button class="scroll-top-btn hidden">
