--- a/ejercicios-dom/index.html
+++ b/ejercicios-dom/index.html
@@ -153,19 +153,30 @@
 				</article>
 			</section>
 			<section
-				id="section7"
+				id="section8"
+				class="container"
+			>
+				<h2>Sorteo Digital</h2>
+				<ul class="players">
+					<li class="player">JavaScript</li>
+					<li class="player">Python</li>
+					<li class="player">JAVA</li>
+					<li class="player">Ruby</li>
+					<li class="player">Php</li>
+					<li class="player">Go</li>
+					<li class="player">Cotlin</li>
+					<li class="player">C++</li>
+				</ul>
+				<button class="winner-btn">Sortear</button>
+			</section>
+			<section
+				id="section9"
 				class="container"
 			>
 				<h2></h2>
 			</section>
 			<section
-				id="section7"
-				class="container"
-			>
-				<h2></h2>
-			</section>
-			<section
-				id="section7"
+				id="section10"
 				class="container"
 			>
 				<h2></h2>
