--- a/ejercicios-dom/index.html
+++ b/ejercicios-dom/index.html
@@ -35,6 +35,8 @@
 				<a href="#section5">Webcam</a>
 				<a href="#section6">Geolocalización</a>
 				<a href="#section7">Filtro</a>
+				<a href="#section8">Sorteo</a>
+				<a href="#section9">Carrusel</a>
 			</nav>
 		</header>
 		<div class="menu-btn">
@@ -50,6 +52,8 @@
 				<a href="#section5">Webcam</a>
 				<a href="#section6">Geolocalización</a>
 				<a href="#section7">Filtro</a>
+				<a href="#section8">Sorteo</a>
+				<a href="#section9">Carrusel</a>
 			</nav>
 		</aside>
 		<main class="main-context">
@@ -173,7 +177,48 @@
 				id="section9"
 				class="container"
 			>
-				<h2></h2>
+				<h2>Responsive Slider</h2>
+				<div class="slider">
+					<div class="slider-container">
+						<div class="slide-content active">
+							<img
+								src="https://placeimg.com/500/500/animals"
+								alt="animals"
+							/>
+						</div>
+						<div class="slide-content">
+							<img
+								src="https://placeimg.com/500/500/tech"
+								alt="tech"
+							/>
+						</div>
+						<div class="slide-content">
+							<img
+								src="https://placeimg.com/500/500/people"
+								alt="people"
+							/>
+						</div>
+						<div class="slide-content">
+							<img
+								src="https://placeimg.com/500/500/anonymous"
+								alt="any"
+							/>
+						</div>
+						<div class="slide-content">
+							<img
+								src="https://placeimg.com/500/500/nature"
+								alt="nature"
+							/>
+						</div>
+					</div>
+					<div class="slider-buttons">
+						<button class="prev-button">
+							<i class="fa-solid fa-chevron-left"></i></button
+						><button class="next-button">
+							<i class="fa-solid fa-chevron-right"></i>
+						</button>
+					</div>
+				</div>
 			</section>
 			<section
 				id="section10"
