--- a/ejercicios-dom/index.html
+++ b/ejercicios-dom/index.html
@@ -27,39 +27,65 @@
 	<body>
 		<header>
 			<div class="name">Web</div>
-			<nav class="desktop-navbar">
-				<a href="#">Reloj</a>
-				<a href="#section2">Teclado</a>
-				<a href="#section3">Emergente</a>
-				<a href="#section4">Detección</a>
-				<a href="#section5">Webcam</a>
-				<a href="#section6">Geolocalización</a>
-				<a href="#section7">Filtro</a>
-				<a href="#section8">Sorteo</a>
-				<a href="#section9">Carrusel</a>
-			</nav>
 		</header>
 		<div class="menu-btn">
 			<i class="fa-solid fa-bars open-icon"></i>
 			<i class="fa-solid fa-xmark close-icon closed"></i>
 		</div>
 		<aside>
-			<nav class="mobile-navbar">
-				<a href="#">Reloj</a>
-				<a href="#section2">Teclado</a>
-				<a href="#section3">Emergente</a>
-				<a href="#section4">Detección</a>
-				<a href="#section5">Webcam</a>
-				<a href="#section6">Geolocalización</a>
-				<a href="#section7">Filtro</a>
-				<a href="#section8">Sorteo</a>
-				<a href="#section9">Carrusel</a>
+			<nav class="navbar">
+				<a
+					href="#section1"
+					data-scroll-spy
+					>Reloj</a
+				>
+				<a
+					href="#section2"
+					data-scroll-spy
+					>Teclado</a
+				>
+				<a
+					href="#section3"
+					data-scroll-spy
+					>Emergente</a
+				>
+				<a
+					href="#section4"
+					data-scroll-spy
+					>Detección</a
+				>
+				<a
+					href="#section5"
+					data-scroll-spy
+					>Webcam</a
+				>
+				<a
+					href="#section6"
+					data-scroll-spy
+					>Geolocalización</a
+				>
+				<a
+					href="#section7"
+					data-scroll-spy
+					>Filtro</a
+				>
+				<a
+					href="#section8"
+					data-scroll-spy
+					>Sorteo</a
+				>
+				<a
+					href="#section9"
+					data-scroll-spy
+					>Carrusel</a
+				>
 			</nav>
 		</aside>
 		<main class="main-context">
 			<section
 				id="section1"
 				class="container"
+				data-scroll-spy
 			>
 				<h2>Reloj y Música</h2>
 				<div class="clock"></div>
@@ -75,6 +101,7 @@
 			<section
 				id="section2"
 				class="container"
+				data-scroll-spy
 			>
 				<h2>Eventos del Teclado</h2>
 				<article class="stage">
@@ -84,6 +111,7 @@
 			<section
 				id="section3"
 				class="container"
+				data-scroll-spy
 			>
 				<h2>Ventana emergente</h2>
 				<button class="open-window-btn">Abrir ventana</button>
@@ -92,6 +120,7 @@
 			<section
 				id="section4"
 				class="container"
+				data-scroll-spy
 			>
 				<h2>Detección de Dispositivos <br />(User Agent)</h2>
 				<div id="user-device"></div>
@@ -99,6 +128,7 @@
 			<section
 				id="section5"
 				class="container"
+				data-scroll-spy
 			>
 				<h2>Detección de Webcam</h2>
 				<video
@@ -111,6 +141,7 @@
 			<section
 				id="section6"
 				class="container"
+				data-scroll-spy
 			>
 				<h2>Geolocalización</h2>
 				<div id="geolocation"></div>
@@ -118,6 +149,7 @@
 			<section
 				id="section7"
 				class="container"
+				data-scroll-spy
 			>
 				<h2>Filtro de búsqueda</h2>
 				<input
@@ -159,6 +191,7 @@
 			<section
 				id="section8"
 				class="container"
+				data-scroll-spy
 			>
 				<h2>Sorteo Digital</h2>
 				<ul class="players">
@@ -176,6 +209,7 @@
 			<section
 				id="section9"
 				class="container"
+				data-scroll-spy
 			>
 				<h2>Responsive Slider</h2>
 				<div class="slider">
@@ -223,6 +257,7 @@
 			<section
 				id="section10"
 				class="container"
+				data-scroll-spy
 			>
 				<h2></h2>
 			</section>
