--- a/ejercicios-dom/index.html
+++ b/ejercicios-dom/index.html
@@ -79,6 +79,16 @@
 					data-scroll-spy
 					>Carrusel</a
 				>
+				<a
+					href="#section10"
+					data-scroll-spy
+					>Videos</a
+				>
+				<a
+					href="#section11"
+					data-scroll-spy
+					>Formularios</a
+				>
 			</nav>
 		</aside>
 		<main class="main-context">
@@ -256,6 +266,84 @@
 			</section>
 			<section
 				id="section10"
+				class="container"
+				data-scroll-spy
+			>
+				<h2>Videos Inteligentes</h2>
+				<video
+					class="video"
+					src="assets/sea-video.mp4"
+					muted
+					controls
+					loop
+					data-smart-video
+				></video>
+				<br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+				<video
+					class="video"
+					src="assets/video-2.mp4"
+					muted
+					controls
+					loop
+					data-smart-video
+				></video>
+			</section>
+			<section
+				id="section11"
+				class="container"
+				data-scroll-spy
+			>
+				<h2>Validaciones de formularios</h2>
+				<form class="contact-form">
+					<legend>Envíanos tus comentarios</legend>
+					<input
+						type="text"
+						name="name"
+						placeholder="Nombre..."
+						title="Sólo puedes escribir letras y espacios en blanco."
+						pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$"
+						required
+					/>
+					<input
+						type="email"
+						name="email"
+						placeholder="Email..."
+						title="Email incorrecto"
+						pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$"
+						required
+					/>
+					<input
+						type="text"
+						name="subject"
+						placeholder="Asunto..."
+						title="El asunto es requerido"
+						required
+					/>
+					<textarea
+						name="comments"
+						cols="50"
+						rows="10"
+						placeholder="Escribe un comentario..."
+						data-pattern="^.{0,250}$"
+						title="Sólo se aceptan hasta 250 caracteres"
+					></textarea>
+					<input
+						type="submit"
+						value="Enviar"
+					/>
+					<div class="contact-form-loader none">
+						<img
+							src="assets/loader.svg"
+							alt="Cargando..."
+						/>
+					</div>
+					<div class="contact-form-response none">
+						<p>Los datos se enviaron con éxito.</p>
+					</div>
+				</form>
+			</section>
+			<section
+				id="section12"
 				class="container"
 				data-scroll-spy
 			>
