--- a/basicos.html
+++ b/basicos.html
@@ -103,7 +103,7 @@
         );
      */
 
-			/* **********     Curso JavaScript: 6. Template Strings - #jonmircha     ********** */
+			/* **********  Template Strings  ********** */
 
 			/* let nombre = "Jon";
     let apellido = "MirCha";
@@ -136,7 +136,7 @@
     console.log(ul3);
  */
 
-			/* **********     Curso JavaScript: 7. Números (Numbers) - #jonmircha     ********** */
+			/* **********    Números (Numbers)    ********** */
 
 			/* let a = 2;
     let b = new Number(1);
