--- a/ejercicios-dom/index.html
+++ b/ejercicios-dom/index.html
@@ -89,6 +89,11 @@
 					data-scroll-spy
 					>Formularios</a
 				>
+				<a
+					href="#section12"
+					data-scroll-spy
+					>Narrador</a
+				>
 			</nav>
 		</aside>
 		<main class="main-context">
@@ -294,7 +299,12 @@
 				data-scroll-spy
 			>
 				<h2>Validaciones de formularios</h2>
-				<form class="contact-form">
+				<form
+					action="https://formsubmit.co/enriquespinelli.coder@gmail.com"
+					method="POST"
+					target="_blank"
+					class="contact-form"
+				>
 					<legend>Envíanos tus comentarios</legend>
 					<input
 						type="text"
@@ -324,8 +334,8 @@
 						cols="50"
 						rows="10"
 						placeholder="Escribe un comentario..."
-						data-pattern="^.{0,250}$"
-						title="Sólo se aceptan hasta 250 caracteres"
+						data-pattern="^.{1,255}$"
+						title="Sólo se aceptan hasta 255 caracteres"
 					></textarea>
 					<input
 						type="submit"
@@ -347,7 +357,17 @@
 				class="container"
 				data-scroll-spy
 			>
-				<h2></h2>
+				<h2>Narrador</h2>
+				<select id="speech-select">
+					<option value="">Elige una voz...</option>
+				</select>
+				<textarea
+					id="speech-text"
+					cols="50"
+					rows="10"
+					placeholder="Ingresa un texto para leer..."
+				></textarea>
+				<button id="speech-btn">Leer texto</button>
 			</section>
 		</main>
 		<button class="scroll-top-btn hidden">
