Creación de los doc Html de CRUD con Ajax, Fetch y Axios.

--- a/crud-axios.html
+++ b/crud-axios.html
@@ -10,10 +10,10 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>CRUD API REST AJAX</title>
+		<title>CRUD API REST AXIOS</title>
 	</head>
 	<body>
-		<h1>CRUD API REST AJAX</h1>
+		<h1>CRUD API REST AXIOS</h1>
 		<section class="crud">
 			<article>
 				<h2 class="crud-title">Agregar Usuario VIP</h2>
@@ -68,6 +68,6 @@
 				</td>
 			</tr>
 		</template>
-		<script src="./js/crud-ajax.js"></script>
+		<script src="./js/crud-axios.js"></script>
 	</body>
 </html>
