--- a/crud-axios.html
+++ b/crud-axios.html
@@ -68,6 +68,7 @@
 				</td>
 			</tr>
 		</template>
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script src="./js/crud-axios.js"></script>
 	</body>
 </html>
