Se agregó el método de pago con Stripe

--- a/ejercicios-ajax/stripe/stripe-checkout.html
+++ b/ejercicios-ajax/stripe/stripe-checkout.html
@@ -28,7 +28,7 @@
 				flex-wrap: wrap;
 			}
 			#products > * {
-				flex: 1 1 300px;
+				flex: 1 1 220px;
 			}
 			.product {
 				background-color: black;
@@ -38,6 +38,8 @@
 				transition: all 0.5s ease-out;
 				margin: 20px;
 				padding: 10px;
+				padding-bottom: 20px;
+				border-radius: 8px;
 				opacity: 1;
 			}
 			.product img {
