--- a/api-tv-shows.html
+++ b/api-tv-shows.html
@@ -22,11 +22,12 @@
 				border: 1px solid gray;
 				border-radius: 5px;
 				padding: 5px;
+				width: 240px;
 			}
-
 			.loader {
 				display: block;
 				margin: auto;
+				width: 80px;
 			}
 			.grid-fluid {
 				margin-top: 20px;
